Changes in version 1.11.6 (2021-11-24)
+ add ggm method in statistical and implement dealing with NA
  values for partial correlation and ggm
+ add (optional) calculation of ranked absolute coefficients in 
  threshold for the top1, top2, and mean types to take into account
  negative coefficients (e.g. from pearson or spearman correlation)

Changes in version 1.11.5 (2021-10-12)
+ add assays in structural based on columns in transformations that are 
  defined by the var argument in structural, adjacency matrices of type 
  will be stored in the AdjacencyMatrix object defined in the columns of 
  transformation
+ implement structural that it can also calculate mass differences of 0 for
  undirected networks

Changes in version 1.11.4 (2021-09-09)
+ shift calculation of as.data.frame(am) in mz_summary
+ several fixes of typos in the comments and vignette
+ fix rtCorrection function

Changes in version 1.11.3 (2021-08-30)
+ change calculation of mass differences, use the differences between 
  (M_2+ppm)-(M_1-ppm) and (M_2-ppm)-(M_1+ppm) instead of (M_1-ppm)-(M_1) and 
  (M_2+ppm)-(M_1) for querying against the list of transformations

Changes in version 1.11.2 (2021-08-30)
+ change error message in test_combine

Changes in version 1.9.6 (2021-08-27)
+ change error message in test_combine

Changes in version 1.9.6 (2021-05-05)
+ reduce dependencies, remove the sna package

Changes in version 1.9.5 (2021-05-04)
+ add functionality to adjust for multiple testing in correlation
+ return symmetric matrices when returning ppm ranges in structural

Changes in version 1.9.4 (2021-04-30)
+ add font in mz_vis to mono
+ split the example on how to use filter in mz_summary from the visualisation

Changes in version 1.9.3 (2021-04-28)
+ introduce AdjacencyMatrix S4 class, derived from SummarizedExperiment, to
  store the adjacency matrices. AdjacencyMatrix objects can be of type
  structural, statistical, and combine